--- a/latex/main.tex
+++ b/latex/main.tex
@@ -73,7 +73,7 @@
 \subfile{differentiable_automata}
 \subfile{extended_examples}
 
-\bibliographystyle{unsrt}
+\bibliographystyle{plainnat}
 \bibliography{references}
 
 \end{document}
