--- a/latex/math_commands.tex
+++ b/latex/math_commands.tex
@@ -12,6 +12,7 @@
 \newcommand{\vv}{{\bf v}}
 \newcommand{\vx}{{\bf x}}
 \newcommand{\vy}{{\bf y}}
+\newcommand{\vz}{{\bf z}}
 
 %% Graphs
 \newcommand{\gA}{\mathcal{A}}
