--- a/latex/references.bib
+++ b/latex/references.bib
@@ -1,50 +1,50 @@
-@article{baydin2018automatic,
-  title={Automatic differentiation in machine learning: a survey},
-  author={Baydin, Atilim Gunes and Pearlmutter, Barak A and Radul, Alexey Andreyevich and Siskind, Jeffrey Mark},
-  journal={Journal of machine learning research},
-  volume={18},
-  year={2018},
-  publisher={Journal of Machine Learning Research}
-}
-
-@misc{k2,
-  title = {{K2}},
-  year = {2020},
-  publisher = {GitHub},
-  journal = {GitHub repository},
-  howpublished = {\url{https://github.com/k2-fsa/k2}}
-}
-
-@inproceedings{povey2016purely,
-  title={Purely sequence-trained neural networks for ASR based on lattice-free MMI.},
-  author={Povey, Daniel and Peddinti, Vijayaditya and Galvez, Daniel and Ghahremani, Pegah and Manohar, Vimal and Na, Xingyu and Wang, Yiming and Khudanpur, Sanjeev},
+@inproceedings{abadi2016tensorflow,
+  title={Tensorflow: A system for large-scale machine learning},
+  author={Abadi, Mart{\'\i}n and Barham, Paul and Chen, Jianmin and Chen, Zhifeng and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and Ghemawat, Sanjay and Irving, Geoffrey and Isard, Michael and others},
+  booktitle={12th $\{$USENIX$\}$ symposium on operating systems design and implementation ($\{$OSDI$\}$ 16)},
+  pages={265--283},
   year={2016}
 }
 
-@inproceedings{graves2006,
-  title={Connectionist temporal classification: labelling unsegmented sequence data with recurrent neural networks},
-  author={Graves, Alex and Fern{\'a}ndez, Santiago and Gomez, Faustino and Schmidhuber, J{\"u}rgen},
-  booktitle={Proceedings of the 23rd international conference on Machine learning},
-  pages={369--376},
-  year={2006},
-  organization={ACM}
+@inproceedings{allauzen2007openfst,
+  title={OpenFst: A general and efficient weighted finite-state transducer library},
+  author={Allauzen, Cyril and Riley, Michael and Schalkwyk, Johan and Skut, Wojciech and Mohri, Mehryar},
+  booktitle={International Conference on Implementation and Application of Automata},
+  pages={11--23},
+  year={2007},
+  organization={Springer}
 }
 
-@inproceedings{povey2011kaldi,
-  title={The Kaldi speech recognition toolkit},
-  author={Povey, Daniel and Ghoshal, Arnab and Boulianne, Gilles and Burget, Lukas and Glembek, Ondrej and Goel, Nagendra and Hannemann, Mirko and Motlicek, Petr and Qian, Yanmin and Schwarz, Petr and others},
-  booktitle={IEEE 2011 workshop on automatic speech recognition and understanding},
-  number={CONF},
-  year={2011},
-  organization={IEEE Signal Processing Society}
+@inproceedings{bergstra2010theano,
+  title={Theano: a CPU and GPU math expression compiler},
+  author={Bergstra, James and Breuleux, Olivier and Bastien, Fr{\'e}d{\'e}ric and Lamblin, Pascal and Pascanu, Razvan and Desjardins, Guillaume and Turian, Joseph and Warde-Farley, David and Bengio, Yoshua},
+  booktitle={Proceedings of the Python for scientific computing conference (SciPy)},
+  volume={4},
+  number={3},
+  pages={1--7},
+  year={2010},
+  organization={Austin, TX}
 }
 
-@inproceedings{paszke2019pytorch,
-  title={Pytorch: An imperative style, high-performance deep learning library},
-  author={Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and others},
-  booktitle={Advances in neural information processing systems},
-  pages={8026--8037},
-  year={2019}
+@inproceedings{bottou97,
+  author = {Bottou, L\'{e}on and {Le Cun}, Yann and Bengio, Yoshua},
+  title = {Global Training of Document Processing Systems using Graph Transformer Networks},
+  booktitle = {Proceedings of Computer Vision and Pattern Recognition (CVPR)},
+  publisher = {IEEE},
+  address = {Puerto-Rico},
+  year = {1997},
+  pages = {489-493},
+  url = {http://leon.bottou.org/papers/bottou-97},
+}
+
+@inproceedings{breuel2008ocropus,
+  title={The {OCR}opus open source {OCR} system},
+  author={Breuel, Thomas M},
+  booktitle={Document recognition and retrieval XV},
+  volume={6815},
+  pages={68150F},
+  year={2008},
+  organization={International Society for Optics and Photonics}
 }
 
 @inproceedings{collobert2011torch7,
@@ -55,29 +55,20 @@
   year={2011}
 }
 
-@inproceedings{abadi2016tensorflow,
-  title={Tensorflow: A system for large-scale machine learning},
-  author={Abadi, Mart{\'\i}n and Barham, Paul and Chen, Jianmin and Chen, Zhifeng and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and Ghemawat, Sanjay and Irving, Geoffrey and Isard, Michael and others},
-  booktitle={12th $\{$USENIX$\}$ symposium on operating systems design and implementation ($\{$OSDI$\}$ 16)},
-  pages={265--283},
+@article{collobert2016wav2letter,
+  title={Wav2letter: an end-to-end convnet-based speech recognition system},
+  author={Collobert, Ronan and Puhrsch, Christian and Synnaeve, Gabriel},
+  journal={arXiv preprint arXiv:1609.03193},
   year={2016}
 }
 
-@article{mohri2002weighted,
-  title={Weighted finite-state transducers in speech recognition},
-  author={Mohri, Mehryar and Pereira, Fernando and Riley, Michael},
-  journal={Computer Speech \& Language},
-  volume={16},
-  number={1},
-  pages={69--88},
-  year={2002},
-  publisher={Elsevier}
-}
-
-@misc{awniblog,
-  author = {Hannun, Awni},
-  title = {Writing About Machine Learning},
-  howpublished = {\url{https://awni.github.io/}}
+@inproceedings{graves2006,
+  title={Connectionist temporal classification: labelling unsegmented sequence data with recurrent neural networks},
+  author={Graves, Alex and Fern{\'a}ndez, Santiago and Gomez, Faustino and Schmidhuber, J{\"u}rgen},
+  booktitle={Proceedings of the 23rd international conference on Machine learning},
+  pages={369--376},
+  year={2006},
+  organization={ACM}
 }
 
 @article{hannun2017sequence,
@@ -96,60 +87,120 @@
   year={2020}
 }
 
-@misc{gtn,
-  author = {Facebook AI Research},
-  title = {{GTN}},
+@misc{k2,
+  title = {{K2}},
   year = {2020},
   publisher = {GitHub},
   journal = {GitHub repository},
-  howpublished = {\url{https://github.com/facebookresearch/gtn}}
+  howpublished = {\url{https://github.com/k2-fsa/k2}}
 }
 
-@misc{w2lcode,
-  author = {Facebook AI Research},
-  title = {wav2letter++},
-  year = {2019},
-  publisher = {GitHub},
-  journal = {GitHub repository},
-  howpublished = {\url{https://github.com/facebookresearch/wav2letter}}
+@incollection{knight2009applications,
+  title={Applications of weighted automata in natural language processing},
+  author={Knight, Kevin and May, Jonathan},
+  booktitle={Handbook of Weighted Automata},
+  pages={571--596},
+  year={2009},
+  publisher={Springer}
 }
 
-@misc{flashlight,
-  author = {Facebook AI Research},
-  title = {Flashlight},
-  year = {2019},
-  publisher = {GitHub},
-  journal = {GitHub repository},
-  howpublished = {\url{https://github.com/facebookresearch/flashlight}}
+@article{mohri2000design,
+  title={The design principles of a weighted finite-state transducer library},
+  author={Mohri, Mehryar and Pereira, Fernando and Riley, Michael},
+  journal={Theoretical Computer Science},
+  volume={231},
+  number={1},
+  pages={17--32},
+  year={2000},
+  publisher={Elsevier}
 }
 
-@inproceedings{pratap2019,
-  author={V. {Pratap} and A. {Hannun} and Q. {Xu} and J. {Cai} and J. {Kahn} and G. {Synnaeve} and V. {Liptchinsky} and R. {Collobert}},
-  booktitle={ICASSP 2019 - 2019 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
-  title={Wav2Letter++: A Fast Open-source Speech Recognition System},
-  year={2019},
-  pages={6460-6464}
+@incollection{mohri2009weighted,
+  title={Weighted automata algorithms},
+  author={Mohri, Mehryar},
+  booktitle={Handbook of weighted automata},
+  pages={213--254},
+  year={2009},
+  publisher={Springer}
 }
 
-@article{hannun2014deep,
-  title={Deep speech: Scaling up end-to-end speech recognition},
-  author={Hannun, Awni and Case, Carl and Casper, Jared and Catanzaro, Bryan and Diamos, Greg and Elsen, Erich and Prenger, Ryan and Satheesh, Sanjeev and Sengupta, Shubho and Coates, Adam and others},
-  journal={arXiv preprint arXiv:1412.5567},
-  year={2014}
+@incollection{mohri2008speech,
+  title={Speech recognition with weighted finite-state transducers},
+  author={Mohri, Mehryar and Pereira, Fernando and Riley, Michael},
+  booktitle={Springer Handbook of Speech Processing},
+  pages={559--584},
+  year={2008},
+  publisher={Springer}
 }
 
-@article{maas2013,
-  title={Rectifier nonlinearities improve neural network acoustic models},
-  author={Maas, A. L. and Hannun, A. Y. and Ng, A. Y.},
-  journal={Proc. ICML},
-  volume={30},
-  year={2013}
+@article{mohri2002weighted,
+  title={Weighted finite-state transducers in speech recognition},
+  author={Mohri, Mehryar and Pereira, Fernando and Riley, Michael},
+  journal={Computer Speech \& Language},
+  volume={16},
+  number={1},
+  pages={69--88},
+  year={2002},
+  publisher={Elsevier}
 }
 
-@inproceedings{amodei2016deep,
-  title={Deep Speech 2: End-to-End Speech Recognition in English and Mandarin},
-  author={Amodei, Dario and Anubhai, Rishita and Battenberg, Eric and Case, Carl and Casper, Jared and Catanzaro, Bryan and Chen, JingDong and Chrzanowski, Mike and Coates, Adam and Diamos, Greg and others},
-  booktitle={Proceedings of The 33rd International Conference on Machine Learning},
-  pages={173--182},
+@article{mohri1997finite,
+  title={Finite-state transducers in language and speech processing},
+  author={Mohri, Mehryar},
+  journal={Computational linguistics},
+  volume={23},
+  number={2},
+  pages={269--311},
+  year={1997}
+}
+
+@inproceedings{paszke2019pytorch,
+  title={Pytorch: An imperative style, high-performance deep learning library},
+  author={Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and others},
+  booktitle={Advances in neural information processing systems},
+  pages={8026--8037},
+  year={2019}
+}
+
+@inproceedings{pereira1994weighted,
+  title={Weighted rational transductions and their application to human language processing},
+  author={Pereira, Fernando and Riley, Michael and Sproat, Richard},
+  booktitle={HUMAN LANGUAGE TECHNOLOGY: Proceedings of a Workshop held at Plainsboro, New Jersey, March 8-11, 1994},
+  year={1994}
+}
+
+@article{pereira1997,
+  title={Speech recognition by composition of weighted finite automata},
+  author={Pereira, FC and Riley, Michael D},
+  journal={Finite-state language processing},
+  pages={431},
+  year={1997}
+}
+
+@inproceedings{povey2016purely,
+  title={Purely sequence-trained neural networks for ASR based on lattice-free MMI.},
+  author={Povey, Daniel and Peddinti, Vijayaditya and Galvez, Daniel and Ghahremani, Pegah and Manohar, Vimal and Na, Xingyu and Wang, Yiming and Khudanpur, Sanjeev},
   year={2016}
+}
+
+@article{sproat1996stochastic,
+  title={A Stochastic Finite-State Word-Segmentation Algorithm for Chinese},
+  author={Sproat, Richard and Gale, William and Shih, Chilin and Chang, Nancy},
+  journal={Computational Linguistics},
+  volume={22},
+  number={3},
+  pages={377--404},
+  year={1996},
+  publisher={MIT Press Journals}
+}
+
+@article{hopcroft2001introduction,
+  title={Introduction to automata theory, languages, and computation},
+  author={Hopcroft, John E and Motwani, Rajeev and Ullman, Jeffrey D},
+  journal={Acm Sigact News},
+  volume={32},
+  number={1},
+  pages={60--65},
+  year={2001},
+  publisher={ACM New York, NY, USA}
 }
